@@ -1,3 +1,8 @@
+2007-07-02  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py (ObjectTree): Add a row-expanded signal.
+	Based on patch by Ali Afshar, fixes #3460
+
 2007-06-14  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
